compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_scoping_inner_use_outer_use.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "begin a := b end a := b"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..23): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..23): []
        Block@(FileId(1), 0..16): Normal
          Assign@(FileId(1), 6..12): None
            Name@(FileId(1), 6..7): "a"@(FileId(1), 6..7), undeclared
            Name@(FileId(1), 11..12): "b"@(FileId(1), 11..12), undeclared
        Assign@(FileId(1), 17..23): None
          Name@(FileId(1), 17..18): "a"@(FileId(1), 6..7), undeclared
          Name@(FileId(1), 22..23): "b"@(FileId(1), 11..12), undeclared

