compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_scoping_outer_use_inner_use.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "q := j begin q := k end"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..23): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..23): []
        Assign@(FileId(1), 0..6): None
          Name@(FileId(1), 0..1): "q"@(FileId(1), 0..1), undeclared
          Name@(FileId(1), 5..6): "j"@(FileId(1), 5..6), undeclared
        Block@(FileId(1), 7..23): Normal
          Assign@(FileId(1), 13..19): None
            Name@(FileId(1), 13..14): "q"@(FileId(1), 0..1), undeclared
            Name@(FileId(1), 18..19): "k"@(FileId(1), 18..19), undeclared

